--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Festival</title>
+    <title>Bar Arg</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/790527b83c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
