--- a/Galery.html
+++ b/Galery.html
@@ -56,19 +56,22 @@
 
     </div>
 
-
     <footer>
         <div class="footer-content">
-            <h3>Contact us</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h3> Contact</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum incidunt dicta eligendi corrupti alias similique excepturi debitis mollitia magni doloribus cum nobis nam, voluptate temporibus, beatae, perferendis asperiores est esse?</p>
             <ul class="socials">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <div class="social-nwetworks">
+                    <a href="#" class="facebook"> <i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="twitter"> <i class="fab fa-twitter"></i></a>
+                    <a href="#" class="google"> <i class="fab fa-google-plus-g"></i></a>
+                    <a href="#" class="youtube"> <i class="fab fa-youtube"></i></a>
+                    <a href="#" class="instagram"> <i class="fab fa-instagram"></i></a>
+                </div>
             </ul>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 Your Company. All rights reserved.</p>
+            <p>copyright &copy;2023 Bar Arg. designed by <span>Pablo Bezard</span></p>
         </div>
     </footer>
 
